# Finance

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PROGRESS.md  bootstrap.py  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
launchers/: README.md  start.bat  start.sh
scripts/: build_ensemble.py  fetch_data.py  post_training_pipeline.py  run_backtest.py  run_full_backtest.py  start_paper_trading.py  start_public.py  train_models.py
src/api/: main.py  schemas.py  state.py  websocket.py
src/api/routes/: models.py  portfolio.py  risk.py  signals.py
src/backtest/: costs.py  engine.py  metrics.py  monte_carlo.py  order_book.py  portfolio.py  walk_forward.py
src/config/: __init__.py  assets.py  constants.py  logging_config.py  settings.py
src/dashboard/: app.py  predictions.py  theme.py
src/execution/: order_manager.py  paper_trader.py  rebalancer.py
src/explainability/: attribution.py  audit_log.py  drift_monitor.py  lime_explainer.py  shap_analyzer.py
src/models/: base.py  meta_labeler.py  registry.py
src/risk/: circuit_breaker.py  correlation_filter.py  hrp.py  position_sizer.py  regime_detector.py  risk_manager.py  var_calculator.py
src/utils/: purged_kfold.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py  test_model_interface.py
tests/unit/: test_api.py  test_backtest_math.py  test_cost_model.py  test_execution.py  test_explainability.py  test_feature_engineer.py  test_no_lookahead.py  test_research_modules.py  test_risk.py  test_walk_forward.py
(+52 files in other folders)
